--- a/home/ubuntu/8080.html
+++ b/home/ubuntu/8080.html
@@ -2,6 +2,7 @@
 <style type="text/css">
 	form.style1 fieldset {
 		padding : 1em;
+		width : 300px;
 		border : 3px solid LightSalmon;
 		}
 	form.style1 legend {
