move select botton

--- a/home/ubuntu/8080.html
+++ b/home/ubuntu/8080.html
@@ -19,7 +19,8 @@
 		<label for="Author"><input type="checkbox" id="Author" name="column" value="a_AuName"> Author </label><br>
 		<label for="Publisher"><input type="checkbox" id="Publisher" name="column" value="p_PubName"> Publisher </label><br>
 		<label for="Price"><input type="checkbox" id="Price" name="column" value="b_Price"> Price </label><br>
+	  </fieldset>
+		<p>
 		<input type="submit" value="선택">
-	  </filedset>
 	</form>
 
