add sorting option (folding)

--- a/home/ubuntu/8080.html
+++ b/home/ubuntu/8080.html
@@ -20,6 +20,15 @@
 		<label for="Publisher"><input type="checkbox" id="Publisher" name="column" value="p_PubName"> Publisher </label><br>
 		<label for="Price"><input type="checkbox" id="Price" name="column" value="b_Price"> Price </label><br>
 	  </fieldset>
+	<p>
+	<details>
+		<summary> Sorting by (optional) </summary>
+		<label for="ISBN_"><input type="radio" id="ISBN_" name="order" value="b_ISBN"> ISBN </label><br>
+		<label for="Title_"><input type="radio" id="Title_" name="order" value="b_Title"> Title </label><br>
+		<label for="Author_"><input type="radio" id="Author_" name="order" value="a_AuName"> Author </label><br>
+		<label for="Publisher_"><input type="radio" id="Publisher_" name="order" value="p_PubName"> Publisher </label><br>
+		<label for="Price_"><input type="radio" id="Price_" name="order" value="b_Price"> Price </label><br> 
+	</details>
 		<p>
 		<input type="submit" value="선택">
 	</form>
