--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -2,23 +2,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta content="text/html; charset=utf8"/>
+<title>주연</title>
 <style>
-a:link {
-	color : green;
-	background-color: transparent;
-	text-decoration: none;
-}
-a:visited {
-	color : green;
-	background-color: transparent;
-	text-decoration: none;
+img{
+	width:900px;
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
 }
 </style>
 </head>
 <body>
 
-<h1>Paper List </h1>
-<a href="http://www.hammerhead.com/thad/morph.html" target="_blank"> Beier & Neely algorithm : Image Morphing</a>
-
+<h1> 익뚜의 야스 </h1>
+<img src="http://t1.daumcdn.net/liveboard/yas/37ad27e7026344fa9e0f26129d997c38.JPG"  alt="익뚜의 야스" />
 </body>
 </html>
